[package]
name = "raw-fire"
version = "0.1.0"
authors = ["jamcar23 <jamcar23@gmail.com>"]

[dependencies]
arrayfire = {path = "./arrayfire-rust/", version = "3.4.0"}
clap = {version = "2", features = ["suggestions", "color", "wrap_help"]}

[[example]]
name = "af_backend"
path = "examples/af_backend.rs"